# rakuten-monitor

./: .coveragerc  .env  .env.example  .env.staging  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .rakuten_env.template  Dockerfile  MIGRATION_EXAMPLE.md  Phase1_実行結果レポート.txt  Phase2_実行結果レポート.txt  Phase3最終作業完了報告書.txt  README.md  SECURITY.md  __init__.py  alembic.ini  alembic.postgresql.ini  chaos_config.json  check_coverage.py  config.json.template  config_loader.py  create_test_sqlite.py  cron_setup_guide.txt  debug_html.py  diff_items.py  discord_bot.py  discord_notifier.py  discord_notifier_backup.py  docker-compose.yml  docker_manage.sh  dump_sqlite.py  error_handler.py  exceptions.py  fetch_items.py  fix guide.md  html_parser.py  install-systemd-service.sh  item_db.py  (+41 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
alembic/: env.py
app/: __init__.py  main.py  server.py
compose/: prometheus.yml
cron/: monitor.crontab
deploy/: README.md  install.sh  rakuten-bot.service  rakuten-monitor.service  rakuten-monitor.timer  rakuten_env.template
doc/: BDD.md  C8-offline-cleanup 指示書.md  C8-secret-fix指示書.md  D3 スタートガイド  BDD シナリオ拡充.md  D5fix.md  D5フェーズ.md  D6 – FastAPI metrics Exporter 実装プラン.md  D7 – Prometheus + Grafana 統合 & Secrets の docker-secret 化.md  Git修正タスク.md  Git修正タスクv2.md  Git提案とリファクタリング.md  Phase 4 guide.md  Phase4 依存・構成修正タスクv3.md  Phase4修正タスクv4.md  TDDPhase4.md  buildfix.md  ステップ4修正v2.md  ステップD1～D2.md  バッチ&Git修正.md  バッチ.md  ブランチ整理 ＆ リファクタリング作業計画.md  修正タスク.md  実装指示書.md  現状整理.md  立案指示書早見表.txt  追記.md
features/: 01_config_based_monitoring.feature  01_new_product.feature  02_restock.feature  02_time_window_control.feature  03_new_product_notification.feature  03_no_change.feature  04_restock_notification.feature  04_unreachable.feature  05_ci_workflow.feature  05_metrics.feature  06_ci_secrets.feature  06_structure_change.feature  07_db_down.feature  08_discord_fail.feature
features_disabled/: 01_new_product.feature  02_restock.feature  04_unreachable.feature  05_structure_change.feature
init-scripts/: 01-init-extensions.sql
rakuten/: __init__.py  discord_client.py  discord_notifier.py  error_handler.py  item_db.py  main.py  metrics.py  rakuten_parser.py
(+59 files in other folders)
