[project]
name = "rakuten-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "yangnana7",email = "roymunou7@yahoo.co.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "discord-py (>=2.5.2,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "rakuten" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
pytest = "^8.4.1"
flake8 = "^7.3.0"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601", "B110", "B608"]
severity = "medium"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
